# vri-ai-assistant

./: .gitignore  LICENSE  README.md  bin.sh  deploy.yml  frontend-deploy.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: backend.yml  cdk.yml  deploy-redoc.yml
adl_synthetic_dataset/: .gitignore  README.md  prepare_git_repo.sh  setup.sh  setup_voice_generation.sh
adl_synthetic_dataset/01_data/: README.md
adl_synthetic_dataset/04_documentation/: voice_generation_guide.md
backend/: .gitignore  Dockerfile  README.md  lambda.Dockerfile  pyproject.toml  start-livekit-agent.sh
careagent/: .env.example  README.md  TODO.md  docker-compose.yml  pyproject.toml  requirements.txt  test_implementation.py
careagent/src/: config.py  intent_classifier.py  livekit_agent.py  router.py
careagent/src/bedrock_agents/: adl_agent.py  base.py  behavior_agent.py  clinical_agent.py  governance_agent.py  medication_agent.py
careagent/src/utils/: logging.py  metrics.py
careagent/tests/: IMPLEMENTATION_SUMMARY.md  README.md  demo.py  load_test.py  run_tests.py  simple_test.py  test_execution_summary_20251015_133412.json  test_report_20251015_133343.json  test_report_20251015_133354.json  test_report_20251015_133403.json  test_report_20251015_133412.json  test_report_20251015_134328.json  test_simulation.py
cdk/: .gitignore  cdk.json  package-lock.json  package.json  parameter.ts
docs/: ADMINISTRATOR.md  LOCAL_DEVELOPMENT.md  PUBLISH_API.md
frontend/: .env.template  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+330 files in other folders)
